# loading-lvgl

./: CMakeLists.txt  lv_conf.h  main.c
lvgl/env_support/cmake/: custom.cmake
lvgl/src/drivers/display/fb/: lv_linux_fbdev.c
ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_helpers.c  ui_helpers.h
ui/fonts/: ui_font_mainport.c
ui/screens/: ui_Screen1.c
